# timesheet_tool

./: .gitignore  README.md  build.ps1  config.example.yaml  generate.py  pyproject.toml  requirements.txt
tests/: config.py  tests_config.py  tests_csv_exporter.py
timesheet/: __main__.py  configer.py  csv_exporter.py  excel.py  pause.py
